PAPP-34608 windows defender atp name updated to microsoft defender for endpoint

--- a/release_notes/1.0.4.md
+++ b/release_notes/1.0.4.md
@@ -1,4 +1,4 @@
-**Windows Defender ATP Release Notes - Published by Splunk May 14, 2019**
+**Microsoft Defender for Endpoint Release Notes - Published by Splunk May 14, 2019**
 
 
 **Version 1.0.4 - Released May 14, 2019**
