--- a/release_notes/2.0.0.md
+++ b/release_notes/2.0.0.md
@@ -1,4 +1,4 @@
-**Windows Defender ATP Release Notes - Published by Splunk February 25, 2020**
+**Microsoft Defender for Endpoint Release Notes - Published by Splunk February 25, 2020**
 
 
 **Version 2.0.0 - Released February 25, 2020**
