--- a/release_notes/3.0.0.md
+++ b/release_notes/3.0.0.md
@@ -1,4 +1,4 @@
-**Windows Defender ATP Release Notes - Published by Splunk July 7, 2020**
+**Microsoft Defender for Endpoint Release Notes - Published by Splunk July 7, 2020**
 
 
 **Version 3.0.0 - Released July 7, 2020**
