--- a/release_notes/3.1.0.md
+++ b/release_notes/3.1.0.md
@@ -1,4 +1,4 @@
-**Windows Defender ATP Release Notes - Published by Splunk February 23, 2021**
+**Microsoft Defender for Endpoint Release Notes - Published by Splunk February 23, 2021**
 
 
 **Version 3.1.0 - Released February 23, 2021**
