--- a/release_notes/3.1.1.md
+++ b/release_notes/3.1.1.md
@@ -1,4 +1,4 @@
-**Windows Defender ATP Release Notes - Published by Splunk June 07, 2021**
+**Microsoft Defender for Endpoint Release Notes - Published by Splunk June 07, 2021**
 
 
 **Version 3.1.1 - Released June 07, 2021**
