--- a/release_notes/3.2.0.md
+++ b/release_notes/3.2.0.md
@@ -1,4 +1,4 @@
-**Windows Defender ATP Release Notes - Published by Splunk August 10, 2021**
+**Microsoft Defender for Endpoint Release Notes - Published by Splunk August 10, 2021**
 
 
 **Version 3.2.0 - Released August 10, 2021**
