--- a/release_notes/3.5.2.md
+++ b/release_notes/3.5.2.md
@@ -1,4 +1,4 @@
-**Windows Defender ATP Release Notes - Published by Splunk December 28, 2021**
+**Microsoft Defender for Endpoint Release Notes - Published by Splunk December 28, 2021**
 
 
 **Version 3.5.2 - Released December 28, 2021**
