--- a/release_notes/3.0.1.md
+++ b/release_notes/3.0.1.md
@@ -1,4 +1,4 @@
-**Windows Defender ATP Release Notes - Published by Splunk January 21, 2021**
+**Microsoft Defender for Endpoint Release Notes - Published by Splunk January 21, 2021**
 
 
 **Version 3.0.1 - Released January 21, 2021**
